Fix hero text alignment in IE11

--- a/src/angular/planit/src/assets/sass/pages/_marketing.scss
+++ b/src/angular/planit/src/assets/sass/pages/_marketing.scss
@@ -27,7 +27,7 @@
       min-width: 35rem;
       width: 47rem;
       max-width: 47rem;
-      margin: unset;
+      margin: 0;
       padding: $space-xxlarge;
       background-color: $marketing-background-color;
       z-index: 1;
@@ -61,7 +61,7 @@
     .description {
       font-size: $marketing-hero-description-size;
       margin-bottom: $space-xxlarge;
-      
+
       @media all and (-ms-high-contrast:none) {
         width: 100%;
       }
